Changed ratings in Dash to links taking user to day details, created display group page, and other small css/html visual changes

--- a/templates/day_info.html
+++ b/templates/day_info.html
@@ -2,22 +2,26 @@
 
 {% block content %}
 <h2>Day Info for: {{ day_information['day'] }}</h2>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.rating.label }}<br>
-        {{ form.rating(size=32, value=day_information['rating']) }}
-        {% for error in form.rating.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.comments.label }}<br>
-        {{ form.comments(size=32, value=day_information['comments']) }}
-        {% for error in form.comments.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit() }}</p>
-</form>
+<body style="text-align: center;">
+  <div class="well">
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.rating.label }}<br>
+            {{ form.rating(size=32, value=day_information['rating']) }}
+            {% for error in form.rating.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.comments.label }}<br>
+            {{ form.comments(size=32, value=day_information['comments']) }}
+            {% for error in form.comments.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
+  </div>
+</body>
 {% endblock %}
