--- a/templates/base.html
+++ b/templates/base.html
@@ -30,15 +30,15 @@
         {% endif %}
       </ul>
       <hr>
-          {% with messages = get_flashed_messages() %}
+      {% with messages = get_flashed_messages() %}
           {% if messages %}
-      <ul, class="warning">
-          {% for message in messages %}
-          <li>{{ message }}</li>
-          {% endfor %}
-      </ul>
+            <div style="text-align: center;">
+              {% for message in messages %}
+                <p style="color:red;">{{ message }}</p>
+              {% endfor %}
+            </div>
           {% endif %}
-          {% endwith %}
-          {% block content %}{% endblock %}
+      {% endwith %}
+      {% block content %}{% endblock %}
     </body>
 </html>
