--- a/templates/dash.html
+++ b/templates/dash.html
@@ -8,7 +8,7 @@
 <div class="well" style="text-align: center;">
   <div>
       {% for rating in dash_info %}
-      <p>{{ rating[0] }} : {{ rating[1] }} </p>
+      <p><a href={{ "/day_info_link?day={}".format(rating[2]) }}>{{ rating[0] }} : {{ rating[1] }}<a></p>
       {% endfor %}
   </div>
 </div>
