--- a/templates/pick_day.html
+++ b/templates/pick_day.html
@@ -2,16 +2,20 @@
 
 {% block content %}
 <h3>Pick a Day to Rate</h3>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <p>YYYY-MM-DD</p>
-    <p>
-        {{ form.day(class_='datepicker') }}<br>
-        {% for error in form.day.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.today() }} {{ form.today.label }}</p>
-    <p>{{ form.submit() }}</p>
-</form>
+<body style="text-align: center;">
+  <div class="well">
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>YYYY-MM-DD</p>
+        <p>
+            {{ form.day(class_='datepicker') }}<br>
+            {% for error in form.day.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.today() }} {{ form.today.label }}</p>
+        <p>{{ form.submit() }}</p>
+    </form>
+  </div>
+</body>
 {% endblock %}
