--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,137 @@
 
 <html>
-    <!-- <link rel="stylesheet" media="screen" href = "{{ url_for('static', filename='css/bootstrap-reboot.min.css') }}">
-    <meta name="viewport" content = "width=device-width, initial-scale=1.0"> -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<!-- Charlist-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+<script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Chartist plugins -->
+<script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-axistitle-master/dist/chartist-plugin-axistitle.min.js')}}"></script>
+<script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-threshold-master/dist/chartist-plugin-threshold.min.js')}}"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/dayrate_style.css') }}>
+<!-- Bootstraps Java Scipts Links -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<!-- Custom CSS -->
+<link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/dayrate_style.css') }}>
+
+<!-- JQuery links  -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Define chart classes -->
+<script>
+  class BasicChart{
+
+    constructor(XData, YData, XLabel, YLabel)
+    {
+      this.XData = XData;
+      this.YData = YData;
+      this.XLabel = XLabel;
+      this.YLabel = YLabel;
+    }
+
+    createGraph()
+    {
+      var data =
+              {
+                labels: this.XData,
+                series:[
+                        this.YData
+                ]
+              }
+      new Chartist.Line(
+        '.ct-chart',
+        data, {
+          showArea: true,
+          axisY: {
+            onlyInteger: true
+          },
+          plugins: [
+          Chartist.plugins.ctAxisTitle({
+            axisX: {
+              axisTitle: this.XLabel,
+              axisClass: "ct-axis-title",
+              offset: {
+                x: 0,
+                y: 25
+              },
+              textAnchor: "bottom"
+            },
+            axisY: {
+              axisTitle: this.YLabel,
+              axisClass: "ct-axis-title",
+              offset: {
+                x: 0,
+                y: 25
+              },
+              flipTitle: true
+            }
+          })
+        ,[
+          Chartist.plugins.ctThreshold({
+            threshold: 5
+          })
+        ]
+      ]});
+    }
+  }
+
+  class GroupDashChart{
+
+    constructor(XData, YData, XLabel, YLabel)
+    {
+      this.XData = XData;
+      this.YData = YData;
+      this.XLabel = XLabel;
+      this.YLabel = YLabel;
+    }
+
+    createGraph()
+    {
+      var data =
+              {
+                labels: this.XData,
+                series:this.YData
+              }
+      new Chartist.Line(
+        '.ct-chart',
+        data, {
+          showArea: true,
+          axisY: {
+            onlyInteger: true
+          },
+          plugins: [
+          Chartist.plugins.ctAxisTitle({
+            axisX: {
+              axisTitle: this.XLabel,
+              axisClass: "ct-axis-title",
+              offset: {
+                x: 0,
+                y: 25
+              },
+              textAnchor: "bottom"
+            },
+            axisY: {
+              axisTitle: this.YLabel,
+              axisClass: "ct-axis-title",
+              offset: {
+                x: 0,
+                y: 25
+              },
+              flipTitle: true
+            }
+          })
+        ,[
+          Chartist.plugins.ctThreshold({
+            threshold: 5
+          })
+        ]
+      ]});
+    }
+  }
+</script>
 
     <head>
       {% if title %}
@@ -39,6 +162,9 @@
             </div>
           {% endif %}
       {% endwith %}
-      {% block content %}{% endblock %}
+      {% block content %}
+
+
+      {% endblock %}
     </body>
 </html>
