--- a/templates/group_display.html
+++ b/templates/group_display.html
@@ -11,11 +11,11 @@
   </div>
 
   <div style="text-align: center;">
-    <p><a href="/group_dash">{{ group_name }}'s Dashboard</a></p>
+    <p><a href={{ "/group_dash?group_name={}".format(encoded[0]) }}>{{ group_name }}'s Dashboard</a></p>
     {% if owner:%}
-      <p><a href="/delete_group">Delete Group</a></p>
-      <p><a href="/add_user_to_group">Add Users</a></p>
-      <p><a href="/change_group_owner">Change Owner</a></p>
+      <p><a href={{ "/delete_group?group_name={}".format(encoded[0]) }}>Delete Group</a></p>
+      <p><a href={{ "/add_user_to_group?group_name={}".format(encoded[0]) }}>Add Users</a></p>
+      <p><a href={{ "/change_group_owner?group_name={}&current_owner={}".format(encoded[0], encoded[1]) }}>Change Owner</a></p>
     {% endif %}
   </div>
 </div>
