Started user preferences and group preferences functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -158,6 +158,7 @@
         {% if 'username' in session %}
         <li><a href="/dash" title="Dashboard">My Dashboard</a></li>
         <li><a href="/groups" title="Groups">Groups</a></li>
+        <li><a href="/user_preferences" title="Preferences">Preferences</a></li>
         <li><a href="/logout" title="Log Out">Log Out</a></li>
         {% else %}
         <li><a href="/login" title="Log In">Login</a></li>
