--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,38 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+  p.about-desc {
+    margin: auto;
+    max-width: 50%;
+    text-align: center;
+  }
+  div.well {
+    max-width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+</style>
 <body>
-
   <h3 style="text-align: center;">Welcome To DayRate!</h3>
-
 </body>
-
+<br>
 <body>
-  <div class="ct-chart ct-perfect-fourth"></div>
-
+  <p class="about-desc">{{ dayrate_description }}</p>
+  <br>
+  <div class="well">
+    <div class="ct-chart ct-perfect-fourth" style="text-align: center;"></div>
+  </div>
   <script>
 
     var XData= ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'];
-    var YData = [5.5, 7, 3.8, 4.3, 5.1];
-    var obj = new BasicChart(XData, YData, "Days", "Ratings");
+    var YData = [[5.5, 7, 3.8, 4.3, 5.1],
+                 [3.2, 4.3, 7.3, 5.5, 2.2],
+                 [5.6, 7.4, 2.3, 1.5, 9],
+                 [8.6, 5.6, 3.2, 4.5, 8.8]];
+
+    var obj = new IndexChart(XData, YData, "Days", "Ratings");
 
     obj.createGraph();
 
