--- a/templates/base.html
+++ b/templates/base.html
@@ -199,7 +199,22 @@
     }
   }
 </script>
-
+<style>
+  div.table-well {
+    max-width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  th.comments {
+    word-wrap: break-word;
+    max-width: 150px;
+  }
+  td.comments {
+    word-wrap: break-word;
+    max-width: 150px;
+  }
+</style>
     <head>
       {% if title %}
       <title>{{ title }} - DayRate</title>
