--- a/templates/group_dash.html
+++ b/templates/group_dash.html
@@ -26,12 +26,15 @@
   </table>
 </div>
 <body>
+  <div class="legend" id="group-legend"></div>
+
   <div class="ct-chart ct-perfect-fourth"></div>
 
   <script>
     var data = $.get('{{ "/group_dash_data?group_name={}".format(group_name_encoded) }}');
     var extract = data.done(function (response) {
-      var obj = new GroupDashChart(response.x, response.y, "Days", "Rating", response.labels);
+      console.log(response.y);
+      var obj = new GroupDashChart(response.x, response.y, "Days", "Rating");
       obj.createGraph();
     })
   </script>
