Fixed issue where Dash would show first n ratings instead of last n

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -14,7 +14,7 @@
 <body>
   <div class="ct-chart ct-perfect-fourth"></div>
   <div class="table-well">
-    <table id="index-table" class="display">
+    <table id="index-table" class="display" data-order="[[ 0, &quot;desc&quot; ]]">
       <thead>
           <tr>
               <th>Day</th>
