--- a/templates/group_dash.html
+++ b/templates/group_dash.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h3 style="text-align: center;">{{ group_name }} Dashboard</h3>
 <div class="table-well">
-  <table id="index-table" class="display">
+  <table id="index-table" class="display" data-order="[[ 0, &quot;desc&quot; ]]">
     <thead>
         <tr>
             <th>Username</th>
