Finished request to join group functionality

--- a/templates/day_info.html
+++ b/templates/day_info.html
@@ -23,5 +23,18 @@
         <p>{{ form.submit() }}</p>
     </form>
   </div>
+  <script>
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    }
+
+    function showPosition(position) {
+      console.log(position.coords.latitude);
+      console.log(position.coords.longitude);
+    }
+    
+  </script>
+
 </body>
 {% endblock %}
