Opened framework for notifications

--- a/templates/base.html
+++ b/templates/base.html
@@ -228,6 +228,7 @@
         <a href="/dash" title="Dashboard">My Dashboard</a>
         <a href="/groups" title="Groups">Groups</a>
         <a href="/user_preferences" title="Preferences">Preferences</a>
+        <a href="/notifications" title="Notifications">Notifications</a>
         <a href="/logout" title="Log Out">Log Out</a>
         {% else %}
         <a href="/login" title="Log In">Login</a>
