Included yesterday button in pick day

--- a/templates/pick_day.html
+++ b/templates/pick_day.html
@@ -14,6 +14,7 @@
             {% endfor %}
         </p>
         <p>{{ form.today() }} {{ form.today.label }}</p>
+        <p>{{ form.yesterday() }} {{ form.yesterday.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
   </div>
