--- a/templates/base.html
+++ b/templates/base.html
@@ -32,15 +32,35 @@
 <script>
   $(function(ready){
     $("#today").change(function() {
-      var day;
+      var today;
       if (this.checked) {
+          var yesterday = document.getElementById("yesterday");
+          if (yesterday.checked){
+            yesterday.checked = false;
+          }
           var now = new Date();
-          day = now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate();
+          today = now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate();
       } else {
           dateStr = "";
       }
-      $("#day").val(day);
+      $("#day").val(today);
     });
+
+    $("#yesterday").change(function() {
+      var yesterday;
+      if (this.checked) {
+          var today = document.getElementById("today");
+          if (today.checked){
+            today.checked = false;
+          }
+          var now = new Date();
+          yesterday = now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + (now.getDate() - 1);
+      } else {
+          dateStr = "";
+      }
+      $("#day").val(yesterday);
+    });
+
   });
 
   $(document).ready( function () {
