Working on reminders

--- a/templates/pick_day.html
+++ b/templates/pick_day.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script src="{{url_for('static', filename='js/pick_day.js')}}"></script>
+
 <h3>Pick a Day to Rate</h3>
 <body style="text-align: center;">
   <div class="well">
