--- a/templates/base.html
+++ b/templates/base.html
@@ -1,272 +1,74 @@
 
 <html>
 
-<!-- Bootstraps Java Scipts Links -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <!-- Bootstraps Java Scipts Links -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-<!-- Custom CSS -->
-<link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/dayrate_style.css') }}>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/dayrate_style.css') }}>
+  <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/base.css') }}>
+  <!-- JQuery links  -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<!-- JQuery links  -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- DataTables -->
+  <script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css"/>
 
-<!-- DataTables -->
-<script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css"/>
+  <!-- Charlist-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+  <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
-<!-- Charlist-->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-<script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+  <!-- Chartist plugins -->
+  <script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-axistitle-master/dist/chartist-plugin-axistitle.min.js')}}"></script>
+  <!-- <script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-threshold-master/dist/chartist-plugin-threshold.min.js')}}"></script>
+  <script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-legend-master/chartist-plugin-legend.js')}}"></script> -->
+  <script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js')}}"></script>
 
-<!-- Chartist plugins -->
-<script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-axistitle-master/dist/chartist-plugin-axistitle.min.js')}}"></script>
-<!-- <script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-threshold-master/dist/chartist-plugin-threshold.min.js')}}"></script>
-<script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-legend-master/chartist-plugin-legend.js')}}"></script> -->
-<script src="{{url_for('static', filename='chartist_plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js')}}"></script>
+  <!-- Import custom chart classes -->
+  <script src="{{url_for('static', filename='js/charts.js')}}"></script>
 
-<!-- Define chart classes -->
-<script>
-  $(function(ready){
-    $("#today").change(function() {
-      var today;
-      if (this.checked) {
-          var yesterday = document.getElementById("yesterday");
-          if (yesterday.checked){
-            yesterday.checked = false;
-          }
-          var now = new Date();
-          today = now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate();
-      } else {
-          dateStr = "";
-      }
-      $("#day").val(today);
-    });
+  <script src="{{url_for('static', filename='js/tables.js')}}"></script>
 
-    $("#yesterday").change(function() {
-      var yesterday;
-      if (this.checked) {
-          var today = document.getElementById("today");
-          if (today.checked){
-            today.checked = false;
-          }
-          var now = new Date();
-          yesterday = now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + (now.getDate() - 1);
-      } else {
-          dateStr = "";
-      }
-      $("#day").val(yesterday);
-    });
-
-  });
-
-  $(document).ready( function () {
-    $('#index-table').DataTable();
-  });
-
-  class BasicChart{
-
-    constructor(XData, YData, XLabel, YLabel)
-    {
-      this.XData = XData;
-      this.YData = YData;
-      this.XLabel = XLabel;
-      this.YLabel = YLabel;
-    }
-
-    createGraph()
-    {
-      var data =
-              {
-                labels: this.XData,
-                series:[
-                        this.YData
-                ]
-              }
-      new Chartist.Line(
-        '.ct-chart',
-        data, {
-          showArea: true,
-          axisY: {
-            onlyInteger: true
-          },
-          plugins: [
-          Chartist.plugins.ctAxisTitle({
-            axisX: {
-              axisTitle: this.XLabel,
-              axisClass: "ct-axis-title",
-              offset: {
-                x: 0,
-                y: 25
-              },
-              textAnchor: "bottom"
-            },
-            axisY: {
-              axisTitle: this.YLabel,
-              axisClass: "ct-axis-title",
-              offset: {
-                x: 0,
-                y: 25
-              },
-              flipTitle: true
-            }
-          })
-      ]});
-    }
-  }
-
-  class GroupDashChart{
-
-    constructor(XData, YData, XLabel, YLabel)
-    {
-      this.XData = XData;
-      this.YData = YData;
-      this.XLabel = XLabel;
-      this.YLabel = YLabel;
-    }
-
-    createGraph()
-    {
-      var data =
-              {
-                labels: this.XData,
-                series:this.YData
-              }
-      new Chartist.Line(
-        '.ct-chart',
-        data,
-         {
-          showArea: true,
-          axisY: {
-            onlyInteger: true
-          },
-          plugins: [
-          Chartist.plugins.ctAxisTitle({
-            axisX: {
-              axisTitle: this.XLabel,
-              axisClass: "ct-axis-title",
-              offset: {
-                x: 0,
-                y: 25
-              },
-              textAnchor: "bottom"
-            },
-            axisY: {
-              axisTitle: this.YLabel,
-              axisClass: "ct-axis-title",
-              offset: {
-                x: 0,
-                y: 25
-              },
-              flipTitle: true
-            }
-          }),
-          Chartist.plugins.tooltip()
-      ]});
-    }
-  }
-  class IndexChart{
-
-    constructor(XData, YData, XLabel, YLabel)
-    {
-      this.XData = XData;
-      this.YData = YData;
-      this.XLabel = XLabel;
-      this.YLabel = YLabel;
-    }
-
-    createGraph()
-    {
-      var data =
-              {
-                labels: this.XData,
-                series:this.YData
-              }
-      new Chartist.Line(
-        '.ct-chart',
-        data,
-         {
-          showArea: false,
-          axisY: {
-            onlyInteger: true
-          },
-          plugins: [
-          Chartist.plugins.ctAxisTitle({
-            axisX: {
-              axisTitle: this.XLabel,
-              axisClass: "ct-axis-title",
-              offset: {
-                x: 0,
-                y: 25
-              },
-              textAnchor: "bottom"
-            },
-            axisY: {
-              axisTitle: this.YLabel,
-              axisClass: "ct-axis-title",
-              offset: {
-                x: 0,
-                y: 25
-              },
-              flipTitle: true
-            }
-          })
-      ]});
-    }
-  }
-</script>
-<style>
-  div.table-well {
-    max-width: 95%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  th.comments {
-    word-wrap: break-word;
-    max-width: 150px;
-  }
-  td.comments {
-    word-wrap: break-word;
-    max-width: 150px;
-  }
-</style>
-    <head>
-      {% if title %}
-      <title>{{ title }} - DayRate</title>
-      {% else %}
-      <title>Welcome to DayRate</title>
+  <head>
+    {% if title %}
+    <title>{{ title }} - DayRate</title>
+    {% else %}
+    <title>Welcome to DayRate</title>
+    {% endif %}
+  </head>
+  <body>
+    <div class="topnav">
+      <a href="/" title="Home"><img src="{{url_for('static', filename='logo.png')}}" height="23"></a>
+      {% if 'username' in session %}
+      <a href="/dash" title="Dashboard">My Dashboard</a>
+      <a href="/groups" title="Groups">Groups</a>
+      <a href="/user_preferences" title="Preferences">Preferences</a>
+      <a href="/logout" title="Log Out">Log Out</a>
+      {% if session['username'] == 'alex' %}
+        <a href="/reminders" title="Log Out">Reminders</a>
       {% endif %}
-    </head>
-    <body>
-      <div class="topnav">
-        <a href="/" title="Home"><img src="{{url_for('static', filename='logo.png')}}" height="23"></a>
-        {% if 'username' in session %}
-        <a href="/dash" title="Dashboard">My Dashboard</a>
-        <a href="/groups" title="Groups">Groups</a>
-        <a href="/user_preferences" title="Preferences">Preferences</a>
-        <a href="/logout" title="Log Out">Log Out</a>
-        {% else %}
-        <a href="/login" title="Log In">Login</a>
-        <a href="/create_account" title="Create Account">Create Account</a>
+      {% else %}
+      <a href="/login" title="Log In">Login</a>
+      <a href="/create_account" title="Create Account">Create Account</a>
+      {% endif %}
+    </div>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <div style="text-align: center;">
+            {% for message in messages %}
+              <p style="color:red;">{{ message }}</p>
+            {% endfor %}
+          </div>
         {% endif %}
-      </div>
-      <hr>
-      {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <div style="text-align: center;">
-              {% for message in messages %}
-                <p style="color:red;">{{ message }}</p>
-              {% endfor %}
-            </div>
-          {% endif %}
-      {% endwith %}
-      {% block content %}
+    {% endwith %}
+    {% block content %}
 
 
-      {% endblock %}
-    </body>
+    {% endblock %}
+  </body>
 </html>
