--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
     margin-right: auto;
   }
 </style>
+
+<script>
+  $(document).ready( function () {
+    $('#index-table').DataTable();
+  });
+</script>
+
 <body>
   <h3 style="text-align: center;">Welcome To DayRate!</h3>
 </body>
